
	Improvements:
	- replace File::Slurp by File::Slurper.
	- export to JSON
	- ::Parser::Markov errors and warnings use Log::Report
	- replace glob() by bsd_glob()
	- add .gitignore
	- "use base" -> "use parent"
	- extends() only works on OODoc::Text objects
	- remove copyright lines from source, added at publish
	- add DOCTYPE to html templates
	- remove out-dated examples

version 2.02: Wed  8 Dec 13:41:32 CET 2021

	Fixes:
	- parsing of requires/option/default when second parameter is
	  missing.
	- pod3 did not include the examples in the output.
	- do not process packages named DB (used with caller())
	- separate artisic license from "as Perl itself", which is either
	  artistic or GPL* rt.cpan.org#120319 [Jitka Plesnikova]
	- inheritance 'is a', sometimes 'is an'

	Improvements:
	- now on GitHUB

version 2.01: Wed 11 Nov 12:27:52 CET 2015

	Fixes:
	- PODTAIL.txt from file should have a blank line added before
	  to avoid to pod statements without separating blank.
	- accept =encoding
	- overload has no parameters to display
	- html_stylesheet processing in HTML(1) formatter
	- show functions in example template
	- DETAILS overview repeated inherited references

	Improvements:
	- bin/oodist remove warnings about use of qw()
	- explicitly use tar with --format=gnu (not posix, to avoid
	  PaxHeaders poluting the extracted directories)
	- refer to docs in base class, in case of inheritance
	- remove many of the empty inherited heads which show-up empty
	- =pod :html, the ':' becomes optional. perlpod has both.
	- ::MarkOv blanks between parens and [] or <> in formatted call
	- ::MarkOv change some texts
	- changed documentation style

version 2.00: Fri Jan 11 09:59:08 CET 2013

	Changes:

	- translated errors to use Log::Report.  Removed the 'verbose'
	  parameters everywhere.

	- removal of discontinued Template::Magick for HTML output. New
	  template based way of producing HTML.

	- functions without parameters will be formatted in Pod with