@@ -35,6 +35,7 @@ version 3.00:
 	- remove copyright lines from source, added at publish
 	- add DOCTYPE to html templates
 	- remove out-dated examples
+	- all objects have the unique attribute
 
 version 2.02: Wed  8 Dec 13:41:32 CET 2021
 
